--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf build",
     "build": "tsc",
-    "start": "npm run build && node ./build/index.js"
+    "start": "npm run build && node ./build/index.js",
+    "start:dev": "nodemon --exec 'node --loader ts-node/esm' ./src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -36,6 +37,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "openai": "^4.38.0"
+    "openai": "^4.38.0",
+    "typed-rest-client": "^1.8.11"
   }
 }
