--- a/package.json
+++ b/package.json
@@ -1,43 +1,19 @@
 {
-  "name": "indy-civic-ai",
+  "name": "indy-civic-ai-api",
   "version": "0.0.1",
   "description": "Indianapolis Civic AI Assistant",
-  "main": "index.ts",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf build",
-    "build": "tsc",
-    "start": "npm run build && node ./build/index.js",
-    "start:dev": "nodemon --exec 'node --loader ts-node/esm' ./src/index.ts"
-  },
   "repository": {
     "type": "git",
     "url": "github.com:sieverssj/indy-civic-ai.git"
   },
   "author": "Stanton Sievers",
   "license": "Apache-2.0",
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.0.0",
-    "@types/express": "^4.17.21",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "globals": "^15.0.0",
-    "nodemon": "^3.1.0",
-    "prettier": "3.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+  "scripts": {
+    "start:backend": "cd server && npm run start:dev",
+    "start:frontend": "cd client && npm run dev",
+    "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\""
   },
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.38.0",
-    "typed-rest-client": "^1.8.11"
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
